# unitraj2hptr

./: LICENSE  README.md  pyproject.toml
res/: hptr_data.md
src/: convert.py  h5_utils.py  utils.py  view.py
test/: test_convert.py
